k8s/pyfln-ui/pyfln-ui-service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: __APP_NAME__
  name: __APP_NAME__-ui-svc
  namespace: __PROJECT_NAME__
spec:
  ports:
    - name: __APP_NAME__-ui-port
      port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: __APP_NAME__
  sessionAffinity: None
  type: NodePort
